[gd_scene load_steps=8 format=2]

[ext_resource path="res://font/NotoSerifJP-Bold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Card.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
use_mipmaps = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.984314, 0.972549, 0.972549, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0.129412, 0.0862745, 0.0862745, 0.6 )
shadow_size = 1
shadow_offset = Vector2( 1, 1 )

[sub_resource type="DynamicFont" id=3]
size = 110
outline_color = Color( 0.0627451, 0.0588235, 0.0588235, 1 )
use_mipmaps = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 22
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.156863, 0.709804, 0.462745, 1 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[node name="Card" type="Control"]
margin_right = 120.0
margin_bottom = 160.0
script = ExtResource( 2 )

[node name="RootForOffset" type="Node2D" parent="."]

[node name="Kanji" type="Label" parent="RootForOffset"]
margin_right = 120.0
margin_bottom = 160.0
custom_colors/font_color = Color( 0.101961, 0.054902, 0.0862745, 1 )
custom_colors/font_color_shadow = Color( 0.635294, 0.258824, 0.407843, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 4 )
text = "亀"
align = 1
valign = 1

[node name="Circle" type="Label" parent="RootForOffset"]
margin_right = 120.0
margin_bottom = 160.0
custom_colors/font_color = Color( 0.101961, 0.054902, 0.0862745, 1 )
custom_colors/font_color_shadow = Color( 0.635294, 0.258824, 0.407843, 1 )
custom_fonts/font = SubResource( 3 )
text = "○"
align = 1
valign = 1

[node name="Heart" type="Label" parent="RootForOffset"]
margin_left = 2.0
margin_top = -2.0
margin_right = 24.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0.592157, 0.211765, 0.211765, 1 )
custom_fonts/font = SubResource( 2 )
text = "♥"
valign = 2

[node name="HPValue" type="Label" parent="RootForOffset"]
margin_left = 25.0
margin_top = -2.0
margin_right = 41.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0.592157, 0.211765, 0.211765, 1 )
custom_constants/shadow_offset_y = 0
custom_fonts/font = SubResource( 2 )
text = "3"
valign = 2

[node name="Dagger" type="Label" parent="RootForOffset"]
margin_left = 99.0
margin_top = -2.0
margin_right = 121.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0.286275, 0.27451, 0.278431, 1 )
custom_fonts/font = SubResource( 2 )
text = "†"
valign = 2

[node name="AttackValue" type="Label" parent="RootForOffset"]
margin_left = 84.0
margin_top = -2.0
margin_right = 100.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0.286275, 0.27451, 0.278431, 1 )
custom_fonts/font = SubResource( 2 )
text = "2"
align = 2
valign = 2

[node name="Highlight" type="Label" parent="RootForOffset"]
visible = false
margin_right = 120.0
margin_bottom = 160.0
custom_styles/normal = SubResource( 5 )

[connection signal="gui_input" from="." to="." method="_on_Card_gui_input"]
